--- a/styles.css
+++ b/styles.css
@@ -100,12 +100,15 @@ button {
   flex: 5;
   margin-right: 60px;
 }
-.content #label-name {
+.content #label-name, .content .label {
   background: #ffd6c6;
   color: black;
   padding: 5px;
   width: 100%;
   margin: 40px 0 10px;
+}
+.content .label {
+  margin: 20px 0 10px;
 }
 .content #typing {
   font-style: italic;
@@ -183,15 +186,30 @@ button {
   grid-row-gap: 20px;
   margin-top: 30px;
 }
+#image-gallery .other-profile {
+  position: relative;
+  opacity: 1;
+}
+#image-gallery .other-profile:after {
+  content: "";
+  position: absolute;
+  background: #15a949;
+  border: 1px solid #0c7230;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  top: -10px;
+  right: -10px;
+}
+#image-gallery .other-profile:hover {
+  opacity: 0.5;
+  transition: all 0.4s ease;
+}
 #image-gallery img {
   -o-object-fit: cover;
      object-fit: cover;
   height: 150px;
   width: 100%;
-}
-#image-gallery img:hover {
-  cursor: pointer;
-  opacity: 0.5;
 }
 
 @keyframes puff-in-center {
