--- a/styles.scss
+++ b/styles.scss
@@ -106,12 +106,16 @@ button {
     flex: 5;
     margin-right: 60px;
 
-    #label-name {
+    #label-name, .label {
         background: #ffd6c6;
         color: black;
         padding: 5px;
         width: 100%;
         margin: 40px 0 10px;
+    }
+
+    .label {
+        margin: 20px 0 10px;
     }
 
     #typing {
@@ -209,15 +213,32 @@ button {
     grid-row-gap: 20px;
     margin-top: 30px;
 
+    .other-profile {
+        position: relative;
+        opacity: 1;
+
+        &:after {
+            content: '';
+            position: absolute;
+            background: #15a949;
+            border: 1px solid #0c7230;
+            height: 15px;
+            width: 15px;
+            border-radius: 50%;
+            top: -10px;
+            right: -10px;
+        }
+
+        &:hover {
+            opacity: 0.5;
+            transition: all 0.4s ease;
+        }
+    }
+
     img {
         object-fit: cover;
         height: 150px;
         width: 100%;
-
-        &:hover {
-            cursor: pointer;
-            opacity: .5;
-        }
     }
 }
 
