--- a/styles.scss
+++ b/styles.scss
@@ -232,6 +232,7 @@ button {
         &:hover {
             opacity: 0.5;
             transition: all 0.4s ease;
+            cursor: pointer;
         }
     }
 
