--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,12 @@
 body {
   background: linear-gradient(0deg, rgb(58, 90, 115) 0%, rgb(99, 156, 197) 100%);
   height: 100vh;
-  padding: 50px;
+  padding: 10px;
+}
+@media (min-width: 768px) {
+  body {
+    padding: 50px;
+  }
 }
 
 h1 {
@@ -90,15 +95,28 @@ button {
 #main-display #main-image {
   -o-object-fit: cover;
      object-fit: cover;
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  max-width: 200px;
+  width: 100%;
   margin-top: 10px;
   flex: 1;
+}
+@media (min-width: 768px) {
+  #main-display #main-image {
+    height: 300px;
+    max-width: 300px;
+    width: 100%;
+  }
 }
 
 .content {
   flex: 5;
-  margin-right: 60px;
+  margin-right: 20px;
+}
+@media (min-width: 768px) {
+  .content {
+    margin-right: 60px;
+  }
 }
 .content #label-name, .content .label {
   background: #ffd6c6;
@@ -181,10 +199,15 @@ button {
 
 #image-gallery {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   margin-top: 30px;
+}
+@media (min-width: 768px) {
+  #image-gallery {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
 #image-gallery .other-profile {
   position: relative;
@@ -236,4 +259,57 @@ button {
     transform-origin: 50% 1400px;
     opacity: 1;
   }
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: red;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid rgb(178, 5, 5);
+  width: 60%;
+}
+.modal-content .warning-content {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+.modal-content .warning-content img {
+  max-width: 150px;
+  width: 100%;
+  height: auto;
+}
+.modal-content .warning-content h2 {
+  font-size: 40px;
+  margin: 10px 0;
+}
+.modal-content .warning-content h2, .modal-content .warning-content p {
+  color: white;
+}
+
+.close-button {
+  color: #fff;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
