--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,11 @@
 body {
     background: linear-gradient(0deg, rgba(58,90,115,1) 0%, rgba(99,156,197,1) 100%);
     height: 100vh;
-    padding: 50px;
+    padding: 10px;
+
+    @media (min-width: 768px) {
+        padding: 50px;
+    }
 }
 
 h1 {
@@ -95,16 +99,27 @@ button {
     
     #main-image {
         object-fit: cover;
-        height: 300px;
-        width: 300px;
+        height: 200px;
+        max-width: 200px;
+        width: 100%;
         margin-top: 10px;
         flex: 1;
+
+        @media (min-width: 768px) {
+            height: 300px;
+            max-width: 300px;
+            width: 100%;
+        }
     }
 }
 
 .content {
     flex: 5;
-    margin-right: 60px;
+    margin-right: 20px;
+
+    @media (min-width: 768px) {
+        margin-right: 60px;
+    }
 
     #label-name, .label {
         background: #ffd6c6;
@@ -208,10 +223,14 @@ button {
 
 #image-gallery {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     margin-top: 30px;
+
+    @media (min-width: 768px) {
+        grid-template-columns: repeat(5, 1fr);
+    }
 
     .other-profile {
         position: relative;
@@ -269,3 +288,65 @@ button {
       opacity: 1;
     }
   }
+
+
+
+  // Pop up
+    .modal {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%; 
+        overflow: auto; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.4);
+    }
+    
+    /* Modal Content */
+    .modal-content {
+        background-color: red;
+        margin: 15% auto; 
+        padding: 20px;
+        border: 1px solid rgb(178, 5, 5);
+        width: 60%; 
+
+        .warning-content {
+            max-width: 400px;
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+
+            img {
+                max-width: 150px;
+                width: 100%;
+                height:auto;
+            }
+
+            h2 {
+                font-size: 40px;
+                margin: 10px 0;
+            }
+
+            h2, p {
+                color: white;
+            }
+        }
+    }
+    
+    .close-button {
+        color: #fff;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+    
+    .close-button:hover,
+    .close-button:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+  
